src/test/deca/context/invalid/provided/manque_attributs.deca
/*/ Description:
//    Programme ayant un attribut manquant en constructeur.
//
// Resultats:
//    Ligne 17 : Erreur contextuelle
//
// Historique:
//    cree le 01/01/2022*/

{
        public class Humain{
        	int age;
        	String nom;
        	String prenom;
        	public void Humain(int age, String nom){
        		this.age = age;
        		this.nom = nom;
        	}
        }

}
